PEL: enable base infrastructure for SBE FFDC base PEL create
This commits provides the base infrastructure for SBE FFDC based
on createPELWithFFDCFiles`D-Bus method on the
org.open_power.Logging.PEL.

More details related to usage of this interface is documented
as part of extensions/openpower-pels/README.md.

In the PEL create interface if the type is custom and subtype
is 0xCB, PEL class function invokes SBE FFDC function to process
SBE FFDC to extract Hardware procedure added user data section and
callouts. SBE FFDC class appends the callout json and create
user data file based FFDC information and continue the normal
PEL create function.

SCOPE of this commit:
 - Add base infrastructure and control build only for "phal" supported
   systems. "phal" feature is mandatory requirement for processing
   SBE FFDC.
 - Add SBE FFDC raw information in PEL user data section

To enable this feature use the below meson build options
  meson build -Dopenpower-pel-extension=enabled -Dphal=enabled

Tested:

"Error Details": {
        "Message":"chipop timeout reported during SBE communication",
        "SRC6": [
           "0x2",
           "[0:15] chip position, [16:23] command class,
            [24:31] command type"
        ]
    },

"User Data 2": {
    "Section Version":          "1",
    "Sub-section type":         "203",
    "Created by":               "0x3500",
    "Data": [
        "FF DC 00 12 00 00 A1 01  00 8E CE 72 00 00 FF FE  |  ...........r....",
        "00 00 00 04 00 00 00 00  00 00 00 04 00 00 00 00  |  ................",
        "00 00 00 00 00 00 00 01  00 00 00 00 00 00 00 02  |  ................",
        "00 00 00 04 00 00 00 00  00 00 00 00 00 00 00 04  |  ................",
        "00 00 00 00 00 00 00 00                           |  ........"
    ]
}

Signed-off-by: Jayanth Othayoth <ojayanth@in.ibm.com>
Change-Id: I2200b3ba9c0977be13e71f25e87f0b16cb50ec5b

--- a/extensions/openpower-pels/meson.build
+++ b/extensions/openpower-pels/meson.build
@@ -29,6 +29,16 @@ else
     )
 endif
 
+extra_sources = []
+build_phal = get_option('phal').enabled()
+
+if build_phal
+    extra_sources += [
+        'sbe_ffdc_handler.cpp',
+    ]
+    add_project_arguments('-DSBE_FFDC_SUPPORTED', language : ['c','cpp'])
+endif
+
 libpel_sources = files(
     'ascii_string.cpp',
     'bcd_time.cpp',
@@ -54,6 +64,7 @@ libpel_sources = files(
     'service_indicators.cpp',
     'severity.cpp',
     'user_header.cpp',
+    extra_sources,
 )
 
 libpel_deps = [
