PEL: Create TemporaryFile class
Added support for creating temporary file
 - Constructor creates the temporary file with data
 - Destructor doesn't deletes file due to PEL function
   related requirements.
 - Provided remove function to delete the file.

Tested: manually verified.

Signed-off-by: Jayanth Othayoth <ojayanth@in.ibm.com>
Change-Id: I5295998d746ef1228512545f0a19faa1f94260d8

--- a/extensions/openpower-pels/meson.build
+++ b/extensions/openpower-pels/meson.build
@@ -30,6 +30,7 @@ else
 endif
 
 extra_sources = []
+
 build_phal = get_option('phal').enabled()
 
 if build_phal
@@ -64,6 +65,7 @@ libpel_sources = files(
     'service_indicators.cpp',
     'severity.cpp',
     'user_header.cpp',
+    'temporary_file.cpp',
     extra_sources,
 )
 
