PEL: Create TemporaryFile class
Added support for creating temporary file
 - Constructor creates the temporary file with data
 - Destructor doesn't deletes file due to PEL function
   related requirements.
 - Provided remove function to delete the file.

Tested: Added test cases for TemporaryFile class and verified
   test_openpower_pels_temporary_file  OK  0.03s

Signed-off-by: Jayanth Othayoth <ojayanth@in.ibm.com>
Change-Id: I5295998d746ef1228512545f0a19faa1f94260d8

--- a/test/openpower-pels/meson.build
+++ b/test/openpower-pels/meson.build
@@ -53,6 +53,11 @@ openpower_pels = {
     'stream': {},
     'user_data': {},
     'user_header': {},
+    'temporary_file': {
+         'sources': [
+            '../../extensions/openpower-pels/temporary_file.cpp',
+        ],
+    },
 }
 
 # Build a common shared library for all openpower tests of all the widely
