PEL: API to convert FAPI based data to PEL format
API support to convert  processed SBE FFDC FAPI format packets
into PEL expected format.

This function is  ported from openpower-proc-control and
customised to make independent function.

Tested: Manually verified.

Signed-off-by: Jayanth Othayoth <ojayanth@in.ibm.com>
Change-Id: I8afdb5861be6b129314621eea342bee5eaae82d7

--- a/extensions/openpower-pels/meson.build
+++ b/extensions/openpower-pels/meson.build
@@ -30,12 +30,19 @@ else
 endif
 
 extra_sources = []
+extra_dependencies = []
 
 build_phal = get_option('phal').enabled()
 
 if build_phal
     extra_sources += [
         'sbe_ffdc_handler.cpp',
+        'fapi_data_process.cpp',
+    ]
+    extra_dependencies += [
+        dependency('libdt-api'),
+        cpp.find_library('ekb'),
+        cpp.find_library('pdbg'),
     ]
 endif
 
@@ -93,7 +100,7 @@ libpel_dep = declare_dependency(
         sdbusplus_dep,
         sdeventplus_dep,
         pdi_dep,
-    ],
+    ] + extra_dependencies,
 
 )
 
