elog-gen: Install elog-gen.py
As was done with autotools, install elog-gen.py and its mako template
into a subdirectory in 'datadir' so that other repositories can use it.

The openpower-debug-collector repository is an example of this usage and
is currently broken without this.

Signed-off-by: Matt Spinler <spinler@us.ibm.com>
Change-Id: I3ca6719e26abfe289d17e2f71875ad6d12b17e04

--- a/meson.build
+++ b/meson.build
@@ -125,6 +125,16 @@ elog_process_gen = custom_target('elog-process-metadata.cpp'.underscorify(),
     ],
 )
 
+# Install elog-gen.py and its template for others to use
+install_data('tools/elog-gen.py',
+    install_dir : get_option('datadir') / 'phosphor-logging/elog/tools'
+)
+
+install_data('tools/phosphor-logging/templates/elog-gen-template.mako.hpp',
+    install_dir : get_option('datadir') /
+        'phosphor-logging/elog/tools/phosphor-logging/templates'
+)
+
 subdir('phosphor-logging')
 
 log_manager_ext_sources = []
