build: Refactor to separate out library
This makes it more clear what code is intended for use by the
phosphor-logging shared library. This is especially nice since it
isolates the `phosphor_logging_dep` to only provide the exported headers
instead of everything in the project.

Additionally, this adds an option to build only the library components
of the project when the services aren't needed.

Change-Id: Ied0858fc70e8054df4c056d91f35a6f0b3acfcb1
Signed-off-by: William A. Kennington III <wak@google.com>

--- a/extensions/openpower-pels/meson.build
+++ b/extensions/openpower-pels/meson.build
@@ -77,6 +77,7 @@ libpel_sources = files(
 )
 
 libpel_deps = [
+    conf_h_dep,
     libpldm_dep,
     nlohmann_json,
     sdbusplus_dep,
@@ -136,6 +137,7 @@ peltool_sources = files(
 
 peltool_deps = [
     CLI11_dep,
+    conf_h_dep,
     python_dep,
 ]
 
