--- a/phosphor-rsyslog-config/meson.build
+++ b/phosphor-rsyslog-config/meson.build
@@ -1,12 +1,12 @@
 executable('phosphor-rsyslog-conf',
     'main.cpp',
     'server-conf.cpp',
-    '../sdjournal.cpp',
     '../elog_meta.cpp',
     elog_process_gen,
     include_directories: include_directories('..'),
     dependencies: [
-        elog_errors_dep,
+        conf_h_dep,
+        phosphor_logging_dep,
         pdi_dep,
         sdbusplus_dep,
         sdeventplus_dep,
