--- a/meson_options.txt
+++ b/meson_options.txt
@@ -33,3 +33,10 @@ option(
     value: 'disabled',
     description: 'Enable support for PHAL',
 )
+
+option(
+    'pdbg_dtb_path',
+    type: 'string',
+    value: '"/var/lib/phosphor-software-manager/pnor/rw/DEVTREE"',
+    description: 'PDBG device tree path environment variable',
+)
