PEL: set pdbg environment variable
pdbg needs PDBG_DTB environment variable initialisation
prior to pdbg init to set correct device tree back-end.

Tested: After software update with this change verified
        that pdbg is using BMC initialised DEVTREE.

Signed-off-by: Jayanth Othayoth <ojayanth@in.ibm.com>
Change-Id: I6a59a79ccd9ae1f7d5947df0905e4ba999f835ec

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -33,3 +33,10 @@ option(
     value: 'disabled',
     description: 'Enable support for PHAL',
 )
+
+option(
+    'pdbg_dtb_path',
+    type: 'string',
+    value: '"/var/lib/phosphor-software-manager/pnor/rw/DEVTREE"',
+    description: 'Used to set BMC interested cec device tree'
+)
