Allow configuring the rsyslog server conf path
This file will be renamed from server.conf to 90-server.conf to allow
custom rsyslog conf files to run before it.

Signed-off-by: Benjamin Fair <benjaminfair@google.com>
Change-Id: Ic2f25dc18ac5f5f4e44d58bf5f23f6d053334559

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -33,3 +33,10 @@ option(
     value: 'disabled',
     description: 'Enable support for PHAL',
 )
+
+option(
+    'rsyslog_server_conf',
+    type: 'string',
+    value: '/etc/rsyslog.d/server.conf',
+    description: 'Path to rsyslog server conf file',
+)
