--- a/meson.build
+++ b/meson.build
@@ -107,7 +107,7 @@ elog_lookup_gen = custom_target('elog-lookup.cpp'.underscorify(),
         '-t', '',
         '-m', '@INPUT1@',
         '-y', yamldir,
-        '-u', meson.current_source_dir() / '../tools/',
+        '-u', meson.current_source_dir() / 'tools/',
         '-o', '@OUTPUT0@',
     ],
 )
@@ -123,7 +123,7 @@ elog_process_gen = custom_target('elog-process-metadata.cpp'.underscorify(),
         '-t', '',
         '-m', '@INPUT1@',
         '-y', yamldir,
-        '-u', meson.current_source_dir() / '../tools/',
+        '-u', meson.current_source_dir() / 'tools/',
         '-o', '@OUTPUT0@',
     ],
 )
