Add install_unit meson option
Enabled by default, can be disabled to skip installing service files
to the fixed /lib/systemd location (which ignores prefix)

Signed-off-by: Matt Johnston <matt@codeconstruct.com.au>
Change-Id: I46dfa545021b267251322594d0e7bde122e79e6d

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -40,3 +40,10 @@ option(
     value: '/etc/rsyslog.d/server.conf',
     description: 'Path to rsyslog server conf file',
 )
+
+option(
+    'install_unit',
+    type: 'feature',
+    value: 'enabled',
+    description: 'Install systemd unit file',
+)
