build: Target c++ arguments specifically where they are needed
This fixes the build with phal enabled, since it tries to add global
project cpp_args after targets have already been declared.

Change-Id: I907fbd40a82725da4e751b82c66c71c602dd2018
Signed-off-by: William A. Kennington III <wak@google.com>

--- a/extensions/openpower-pels/meson.build
+++ b/extensions/openpower-pels/meson.build
@@ -31,6 +31,7 @@ endif
 
 extra_sources = []
 extra_dependencies = []
+extra_args = []
 
 build_phal = get_option('phal').enabled()
 
@@ -44,7 +45,12 @@ if build_phal
         cpp.find_library('pdbg'),
         cpp.find_library('ekb'),
     ]
-    add_project_arguments('-DSBE_FFDC_SUPPORTED', language : ['c','cpp'])
+    extra_args += [
+        '-DSBE_FFDC_SUPPORTED',
+    ]
+    log_manager_ext_args += [
+        '-DSBE_FFDC_SUPPORTED',
+    ]
 endif
 
 libpel_sources = files(
@@ -91,6 +97,7 @@ libpel_lib = static_library(
     libpel_sources,
     'paths.cpp', # paths is separate because it is overridden during test.
     include_directories: include_directories('../..', '../../gen'),
+    cpp_args: extra_args,
     dependencies: libpel_deps,
 )
 
