PEL: fix bitbake failures related to commit e0538848
failure 1:
   ../git/extensions/openpower-pels/meson.build:47:4:
   ERROR: Tried to use 'add_project_arguments' after a
   build target has been declared. This is not permitted.
   Please declare all arguments before your targets.
   Fix : Moved add_project_arguments before target
         target declaration.
         Removed unused "c" compiler option from the
         project_arguments.
failure 2:
   fatal error: phosphor-logging/log.hpp: No such file
   or directory.
   Fix : Added header file include path in meson build.

Tested: Unit testing is successfull.
        Created and verified SBE failure related PEL.

Signed-off-by: Jayanth Othayoth <ojayanth@in.ibm.com>
Change-Id: I880ad5d0c80f6b4ded69c6575657398008d28b91

--- a/meson.build
+++ b/meson.build
@@ -23,6 +23,10 @@ if not sdbusplus_dep.found()
     sdbusplus_dep = sdbusplus_proj.get_variable('sdbusplus_dep')
 endif
 
+if get_option('phal').enabled()
+    add_project_arguments('-DSBE_FFDC_SUPPORTED', language : ['cpp'])
+endif
+
 pdi_vars = []
 if not get_option('openpower-pel-extension').disabled()
     pdi_vars += ['data_org_open_power=true']
