lg2: initial implementation of C++20 structured logging
Signed-off-by: Patrick Williams <patrick@stwcx.xyz>
Change-Id: If37857cc3748df1ea6f767ce535b02c63cde8370

--- a/lib/include/phosphor-logging/meson.build
+++ b/lib/include/phosphor-logging/meson.build
@@ -16,9 +16,19 @@ phosphor_logging_gen += custom_target(
 
 install_headers(
     'elog.hpp',
+    'lg2.hpp',
     'log.hpp',
     'sdjournal.hpp',
     subdir: 'phosphor-logging',
+)
+
+install_headers(
+    'lg2/concepts.hpp',
+    'lg2/conversion.hpp',
+    'lg2/flags.hpp',
+    'lg2/level.hpp',
+    'lg2/logger.hpp',
+    subdir: 'phosphor-logging/lg2',
 )
 
 install_headers(
