--- a/lib/meson.build
+++ b/lib/meson.build
@@ -13,6 +13,7 @@ phosphor_logging_deps = [
 phosphor_logging_lib = library(
     'phosphor_logging',
     'elog.cpp',
+    'lg2_logger.cpp',
     'sdjournal.cpp',
     phosphor_logging_gen,
     implicit_include_directories: false,
