lib: Change name to accomodate direct linkers
We have some builds that are not using pkgconfig and instead directly
linking against the library. This makes the name consistent with the
linkers.

Change-Id: I3b618d53784a52c8e5dea5857b363961e5216c95
Signed-off-by: William A. Kennington III <wak@google.com>

--- a/lib/meson.build
+++ b/lib/meson.build
@@ -11,7 +11,7 @@ phosphor_logging_deps = [
 ]
 
 phosphor_logging_lib = library(
-    'phosphor-logging',
+    'phosphor_logging',
     'elog.cpp',
     'sdjournal.cpp',
     phosphor_logging_gen,
