lg2: compile time header format checking
Add support to check the format of message headers at compile
time to verify the rules imposed by journald APIs.

Signed-off-by: Patrick Williams <patrick@stwcx.xyz>
Change-Id: I99fcbd8918bbf11ba839843ac8e793d8402b9055

--- a/lib/include/phosphor-logging/meson.build
+++ b/lib/include/phosphor-logging/meson.build
@@ -26,6 +26,7 @@ install_headers(
     'lg2/concepts.hpp',
     'lg2/conversion.hpp',
     'lg2/flags.hpp',
+    'lg2/header.hpp',
     'lg2/level.hpp',
     'lg2/logger.hpp',
     subdir: 'phosphor-logging/lg2',
