PEL.Entry - Add managementSystemAck property
Add managementSystemAck property to PEL.Entry interface to support HMC
acknowledgement of event receipt.

Tested:
1. Created a PEL log using busctl and set-property managementSystemAck
to true. Verified that the flag is set by using peltool
 Result:(output of peltool)
    "Host Transmission":        "Not Sent",
    "HMC Transmission":         "Acked"
Restarted phosphor-log-manager and verified that the flag is true.

2. Generated PEL using RAWPEL and verified all the steps as in 1.

Change-Id: Ifa06cca0063c6c609317192f9c18bb2524e2f292
Signed-off-by: Vijay Lobo <vijaylobo@gmail.com>

--- a/extensions/openpower-pels/meson.build
+++ b/extensions/openpower-pels/meson.build
@@ -127,6 +127,7 @@ log_manager_ext_sources += files(
     'entry_points.cpp',
     'extended_user_data.cpp',
     'host_notifier.cpp',
+    'pel_entry.cpp',
     'manager.cpp',
     'pldm_interface.cpp',
     'repository.cpp',
