build: update cereal dep for subprojects
Starting with meson 0.56, it seems preferable to use
'cmake.dependency' rather than 'cmake.get_variable' and with
meson 0.59, the 'get_variable' approach doesn't even work.
Update as appropriate.

Signed-off-by: Patrick Williams <patrick@stwcx.xyz>
Change-Id: I408e53082be6f8a3978acaa69072343796c36d8b

--- a/meson.build
+++ b/meson.build
@@ -79,7 +79,7 @@ if not has_cereal
         options: cereal_opts,
         required: false)
     assert(cereal_proj.found(), 'cereal is required')
-    cereal_dep = cereal_proj.get_variable('cm_cereal_dep')
+    cereal_dep = cereal_proj.dependency('cereal')
 endif
 
 # Generate sdbus++ files.
