--- a/lib/include/phosphor-logging/meson.build
+++ b/lib/include/phosphor-logging/meson.build
@@ -29,6 +29,7 @@ install_headers(
     'lg2/header.hpp',
     'lg2/level.hpp',
     'lg2/logger.hpp',
+    'lg2/source_location.hpp',
     subdir: 'phosphor-logging/lg2',
 )
 
