PEL: rename feature flag SBE_FFDC_SUPPORTED
  Initially SBE_FFDC_SUPPORTED flag introduced to enable
SBE ffdc specific feature fro phal feature enabled systems.
There is new requirement to add additional callout details
for phal feature enabled systems.
Changing "SBE_FFDC_SUPPORTED" to PHAL feature specific
name "PEL_ENABLE_PHAL".

Tested: verified build with phal enabled option.

Signed-off-by: Jayanth Othayoth <ojayanth@in.ibm.com>
Change-Id: Ief4b7a97fa148707f48f70f3f99d2f1a04a05f2e

--- a/extensions/openpower-pels/meson.build
+++ b/extensions/openpower-pels/meson.build
@@ -46,10 +46,10 @@ if build_phal
         cpp.find_library('ekb'),
     ]
     extra_args += [
-        '-DSBE_FFDC_SUPPORTED',
+        '-DPEL_ENABLE_PHAL',
     ]
     log_manager_ext_args += [
-        '-DSBE_FFDC_SUPPORTED',
+        '-DPEL_ENABLE_PHAL',
     ]
 endif
 
