PEL: Added phal specific service action support
This commits enables the basic infrastructure to add service
actions(guard/deconfigure) supports for "phal"  feature enabled
systems. Also enabled "guard" related service , which includes
creating guard D-Bus object using hardware isolation D-Bus api's

To enable this support, PEL users has to include the array of
JSON callouts, which includes the below required informations.
"EntityPath": entity path of the hardware from the PHAL device tree.
"GuardType":  Guard type string defined libekb_p10.
"Guarded": boolean, true to create guard records.

Tested: created guard records and verified

Signed-off-by: Jayanth Othayoth <ojayanth@in.ibm.com>
Change-Id: Ibc57ae0363cd5fb9facd2ed7049a70806a5b891e

--- a/extensions/openpower-pels/meson.build
+++ b/extensions/openpower-pels/meson.build
@@ -39,6 +39,7 @@ if build_phal
     extra_sources += [
         'sbe_ffdc_handler.cpp',
         'fapi_data_process.cpp',
+        'phal_service_actions.cpp',
     ]
     extra_dependencies += [
         dependency('libdt-api'),
