PEL: Add deconfigure records
PHAL enabled systems enabeld harwdare deconfigure (set state
to non-functional, do any Deconfigure actions and create a
deconfigure Record in cec devtree) during PEL create.
This function enabled only for the PEL create request with
required "Deconfigured" key in the callout information.

libphal api is used for creating deconfigure records.

Tested: Verified deconfigure records in the cec devtree

Signed-off-by: Jayanth Othayoth <ojayanth@in.ibm.com>
Change-Id: I77b630da00d9c1f2807aac06a0220e4c14c79fdb

--- a/extensions/openpower-pels/meson.build
+++ b/extensions/openpower-pels/meson.build
@@ -45,6 +45,7 @@ if build_phal
         dependency('libdt-api'),
         cpp.find_library('pdbg'),
         cpp.find_library('ekb'),
+        cpp.find_library('phal'),
     ]
     extra_args += [
         '-DPEL_ENABLE_PHAL',
