--- a/meson_options.txt
+++ b/meson_options.txt
@@ -41,3 +41,10 @@ option(
     value: '/etc/rsyslog.d/server.conf',
     description: 'Path to rsyslog server conf file',
 )
+
+option(
+    'audit_logging',
+    type: 'feature',
+    value: 'disabled',
+    description: 'Enable support for Audit logging',
+)
