audit: Add DBus interfaces for audit
Create a DBus service after the phosphor-audit process starts,
and create a Notify method to process audit data.

Tested:
busctl introspect xyz.openbmc_project.Logging.Audit /xyz/openbmc_project/logging/audit/manager
NAME                                      TYPE      SIGNATURE RESULT/VALUE FLAGS
org.freedesktop.DBus.Introspectable       interface -         -            -
.Introspect                               method    -         s            -
org.freedesktop.DBus.Peer                 interface -         -            -
.GetMachineId                             method    -         s            -
.Ping                                     method    -         -            -
org.freedesktop.DBus.Properties           interface -         -            -
.Get                                      method    ss        v            -
.GetAll                                   method    s         a{sv}        -
.Set                                      method    ssv       -            -
.PropertiesChanged                        signal    sa{sv}as  -            -
xyz.openbmc_project.Logging.Audit.Manager interface -         -            -
.Notify                                   method    t         -

Signed-off-by: George Liu <liuxiwei@inspur.com>
Change-Id: I21b2fee584ada20d6690f1665f8ccf3ac9c55c2a

--- a/phosphor-audit/meson.build
+++ b/phosphor-audit/meson.build
@@ -1,13 +1,20 @@
 
 audit_sources = [
+    generated_sources,
     'audit_main.cpp',
+    'audit_manager.cpp',
 ]
 
 executable(
     'phosphor-audit',
     audit_sources,
-    implicit_include_directories: true,
-    dependencies: [],
+    include_directories: ['.', '../', '../gen'],
+    dependencies: [
+        pdi_dep,
+        phosphor_logging_dep,
+        sdbusplus_dep,
+        sdeventplus_dep,
+    ],
     install: true,
     install_dir: get_option('bindir')
 )
