audit: Parse audit data and store logging
Write the audit data to the `/var/lib/log/audit/audit.log*` file,
the default file size is 1M (it can be configured later),
after which a new file will be created automatically.

Tested:
1. Define events.yaml & metadata.yaml in the phosphor-dbus-interfaces
Test.events.yaml:
```
- name: AuditTest
  description: This is an audit log test
  consumer: audit
```

Test.metadata.yaml:
```
- name: AuditTest
  level: INFO
  meta:
    - str: "EVENT_TYPE=%u"
      type: uint8
    - str: "EVENT_RC=%u"
      type: int32
    - str: "EVENT_USER=%s"
      type: string
    - str: "EVENT_ADDR=%s"
      type: string
```

2. Call the event method in the app
event<AuditTest>(EVENT_TYPE(1), EVENT_RC(0),
                 EVENT_USER("root"), EVENT_ADDR("127.0.0.1));

3. cat /var/lib/log/audit# cat audit.log
1970-01-01 CST 08:02:05.160686,1,0,root,127.0.0.1,This is an audit log test.

Signed-off-by: George Liu <liuxiwei@inspur.com>
Change-Id: I31a232a719bc859918c896ef12634c9520249f1b

--- a/phosphor-audit/meson.build
+++ b/phosphor-audit/meson.build
@@ -3,6 +3,8 @@ audit_sources = [
     generated_sources,
     'audit_main.cpp',
     'audit_manager.cpp',
+    'file.cpp',
+    'utils.cpp',
 ]
 
 executable(
