audit: Add service file
Add the audit service file and realize automatic loading at startup.

Signed-off-by: George Liu <liuxiwei@inspur.com>
Change-Id: I1f8c81953471599408bee7900aa34112418e6f61

--- a/phosphor-audit/meson.build
+++ b/phosphor-audit/meson.build
@@ -20,3 +20,12 @@ executable(
     install: true,
     install_dir: get_option('bindir')
 )
+
+systemd_system_unit_dir = systemd.get_variable(
+        pkgconfig: 'systemdsystemunitdir',
+        pkgconfig_define: ['prefix', get_option('prefix')])
+
+configure_file(input: 'services/xyz.openbmc_project.Logging.Audit.service',
+                output: 'xyz.openbmc_project.Logging.Audit.service',
+                copy: true,
+                install_dir: systemd_system_unit_dir)
